<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SendARecipeActivity"
        android:background="@color/colorAccent"
        android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/back_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send_your_recipe"
        android:fontFamily="@font/boogaloo"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textAllCaps="true"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">


        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text" />




        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category1_prompt"
            android:fontFamily="@font/boogaloo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"/>


        <Spinner
            android:id="@+id/cat1_spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/category1_prompt"
            android:entries="@array/category1"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category2_prompt"
            android:fontFamily="@font/boogaloo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"/>


        <Spinner
            android:id="@+id/cat2_spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/category1_prompt"
            android:entries="@array/category2"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_prompt"
            android:fontFamily="@font/boogaloo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"/>


        <Spinner
            android:id="@+id/difficulty_spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/difficulty"
            android:layout_marginTop="5dp"
            />



        <EditText
            android:id="@+id/number_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginTop="15dp"
            android:hint="@string/number_of_ingredients"/>

        <EditText
            android:id="@+id/prep_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:hint="@string/prep_time"/>

        <EditText
            android:id="@+id/cook_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cook_time"
            android:layout_marginTop="5dp"
            android:inputType="number" />

        <EditText
            android:id="@+id/total_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:hint="@string/total_time"/>

        <EditText
            android:id="@+id/servings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:hint="@string/serving"/>

        <EditText
            android:id="@+id/calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:hint="@string/calories"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:fontFamily="@font/boogaloo"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/ingredient1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="10dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />
        <EditText
            android:id="@+id/ingredient6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:inputType="text" />

        <EditText
            android:id="@+id/ingredient20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingredient"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:fontFamily="@font/boogaloo"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"/>


        <EditText
            android:id="@+id/step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/step"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/step2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/step"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/step3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/step"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/step4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/step"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/step5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/step"
            android:layout_marginTop="5dp"
            android:inputType="text" />
        <EditText
            android:id="@+id/step6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/step"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/step7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/step"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/step8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/step"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/step9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/step"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/step10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/step"
            android:layout_marginTop="5dp"
            android:inputType="text" />




        <CheckBox
            android:id="@+id/vegeterian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vegeterian"
            android:layout_marginTop="20dp"/>

        <CheckBox
            android:id="@+id/gluten_free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glutenFree"
            android:layout_marginTop="5dp"/>

        <CheckBox
            android:id="@+id/spicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spicy"
            android:layout_marginTop="5dp"/>

        <CheckBox
            android:id="@+id/containsNuts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/containsNuts"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addimage"
            android:fontFamily="@font/boogaloo"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"/>



        <ImageView
            android:id="@+id/post_Image"
            android:layout_width="301dp"
            android:layout_height="120dp"
            android:layout_marginTop="70dp"
            android:src="@android:drawable/ic_menu_add"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_section" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/submitbtn"
            android:text="@string/submit"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo"/>







    </LinearLayout>

    </LinearLayout>


</ScrollView>