<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_button" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:fontFamily="@font/boogaloo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="35dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/enter_name"
                app:startIconDrawable="@drawable/pen_icon"
                android:textColor="@color/colorPrimaryDark"
                app:startIconTint="@color/colorPrimaryDark"
                app:endIconMode="clear_text"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorPrimaryDark">
                <!-- style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxStrokeWidthFocused="2dp">-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enter_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:startIconDrawable="@drawable/contact_us_icon"
                android:textColor="@color/colorPrimaryDark"
                app:startIconTint="@color/colorPrimaryDark"
                app:endIconMode="clear_text">
                <!-- style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxStrokeWidthFocused="2dp">-->
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/enter_email"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:startIconDrawable="@drawable/password"
                android:textColor="@color/colorPrimaryDark"
                app:startIconTint="@color/colorPrimaryDark"
                app:endIconMode="password_toggle">
                <!-- style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxStrokeWidthFocused="2dp">-->
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/enter_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:startIconDrawable="@drawable/password"
                android:textColor="@color/colorPrimaryDark"
                app:startIconTint="@color/colorPrimaryDark"
                app:endIconMode="password_toggle">
                <!-- style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxStrokeWidthFocused="2dp">-->
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/enter_cpassword"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

       <!-- <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/remember_me"
                android:text="@string/remember_me"
                android:layout_centerVertical="true"
                android:textColor="@color/colorPrimaryDark"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgot_password"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:background="#00000000"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>-->


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:text="@string/register"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <!--
                android:layout_centerHorizontal="true"-->


            <TextView
                android:id="@+id/yes_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/yes_account"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/yes_account"
                android:layout_alignRight="@+id/yes_account"
                android:layout_marginEnd="-122dp"
                android:layout_marginRight="-122dp"
                android:background="#00000000"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>